environments/gloo-edge-portal/2-bookinfo/dev/active/patches/bookinfo-vs.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: cf-upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'bookinfo-gke.kapoozi.com'
    options:
      extauth:
        configRef:
          name: bookinfo-okta
          namespace: gloo-system
    routes:
    - matchers:
      - prefix: /
      - prefix: /callback
      routeAction:
        multi:
          destinations:
          - destination:
              upstream:
                name: bookinfo-v1-productpage-9080
                namespace: gloo-system
            weight: 5
          - destination:
              upstream:
                name: bookinfo-v2-productpage-9080
                namespace: gloo-system
            weight: 5
